<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@color/black"

    android:orientation="vertical"
    tools:context=".ConsumeAPI">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="126dp"
        android:layout_marginBottom="100dp"
        app:srcCompat="@drawable/api" />

    <EditText
        android:id="@+id/txtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:background="@drawable/border_text"
        android:backgroundTint="@color/white"
        android:drawablePadding="5dp"
        android:textColor="@color/black"
        android:ems="10"
        android:hint="@string/userid"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp" />

    <EditText
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:background="@drawable/border_text"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="text"
        android:padding="15dp" />

    <EditText
        android:id="@+id/txtBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:background="@drawable/border_text"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/body"
        android:inputType="textMultiLine|text"
        android:padding="15dp" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"
        android:padding="5dp"
        android:text="@string/send"
        android:textColor="#4A148C" />

    <Button
        android:id="@+id/btnConsultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"
        android:onClick="consultar"
        android:padding="5dp"
        android:text="@string/consultar"
        android:textColor="#4A148C" />

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"
        android:onClick="actualizar"
        android:padding="5dp"
        android:text="@string/actualizar"
        android:textColor="#4A148C" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"
        android:minHeight="48dp"
        android:onClick="eliminar"
        android:padding="5dp"
        android:text="@string/eliminar"
        android:textColor="#4A148C" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"
        android:onClick="volver"
        android:padding="5dp"
        android:text="@string/volver"
        android:textColor="@color/white" />
</LinearLayout>