<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="100dp"
        android:layout_weight="50"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:layout_weight="9"
        android:autofillHints=""
        android:background="@drawable/border_text"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:padding="15dp"
        tools:ignore="VisualLintTextFieldSize,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:layout_weight="9"
        android:autofillHints=""
        android:background="@drawable/border_text"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        tools:ignore="VisualLintTextFieldSize,TouchTargetSizeCheck" />


    <Switch
        android:id="@+id/online"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="@color/white"
        android:text="@string/on"
        android:layout_marginStart="150dp"
        android:layout_weight="10"
        android:visibility="visible"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <CheckBox
        android:id="@+id/terminosCondiciones"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="80dp"
        android:layout_weight="5"
        android:text="@string/terminos"
        android:textColor="@color/white"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/ingresar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="50dp"
        android:layout_weight="10"
        android:onClick="Login"
        android:padding="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/in"
        android:textColor="@color/black"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>