<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"

    tools:context=".Home">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/life" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datos"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="35sp"
            android:id="@+id/textView" />

        <TextView
            android:id="@+id/infoName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:padding="20dp"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/infoPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:padding="20dp"
            android:textSize="40sp" />


        <TextView
            android:id="@+id/infoOnline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onli"
            android:textColor="@color/white"
            android:padding="20dp"
            android:textSize="40sp" />

        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="volver"
            android:padding="20dp"
            android:backgroundTint="@color/white"
            android:text="@string/volver"
            android:textColor="@color/black"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>